refactor(client): cambios menores
Correciones archivos de configuración, mockup de users, hook básico para Toast, favicon agregado

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -5,6 +5,7 @@
       "@/*": ["./src/*"],
       "@api/*": ["./src/api/*"],
       "@components/*": ["./src/components/*"],
+      "@context/*": ["./src/context/*"],
       "@hooks/*": ["./src/hooks/*"],
       "@mocks/*": ["./src/mocks/*"],
       "@pages/*": ["./src/pages/*"],
