--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,20 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@headlessui/tailwindcss": "^0.2.1",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@remixicon/react": "^4.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.9",
     "@tremor/react": "^3.18.3",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "next": "15.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
     "postcss": "^8",
