--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "@tremor/react": "^3.18.3",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
