--- a/backend/restApi/src/main/resources/application.properties
+++ b/backend/restApi/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=9000
 
-spring.data.mongodb.uri=mongodb://localhost:27017/newdb
+spring.data.mongodb.uri=mongodb+srv://ftfernandez:dufc9Mrptf9zEiQS@ing-soft-tp-grupal.4w2qt.mongodb.net/newdb?retryWrites=true&w=majority
