--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -11,8 +11,7 @@
       "@pages/*": ["./src/pages/*"],
       "@routes/*": ["./src/routes/*"],
       "@styles/*": ["./src/styles/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@compTest/*": ["./src/components/onTest/*"]
+      "@utils/*": ["./src/utils/*"]
     }
   },
   "include": ["**/*.js", "**/*.jsx"],
