--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,14 @@
 # Stage 1: Dependencies
 FROM maven:3.8.3-openjdk-17-slim AS dependencies
 WORKDIR /home/app
-COPY restApi/pom.xml restApi/pom.xml
+COPY backend/restApi/pom.xml restApi/pom.xml
 WORKDIR /home/app/restApi
 RUN mvn dependency:resolve dependency:resolve-plugins
 
 # Stage 2: Build the Project
 FROM dependencies AS build
 WORKDIR /home/app
-COPY restApi /home/app/restApi
+COPY backend/restApi /home/app/restApi
 WORKDIR /home/app/restApi
 RUN mvn package -DskipTests
 
@@ -20,7 +20,7 @@ WORKDIR /home/app
 COPY --from=build /home/app/restApi/target/restApi-0.0.1-SNAPSHOT.jar /home/app/app.jar
 
 # Optionally, copy additional resources if needed
-COPY /restApi/src/main/resources /home/app/back/src/main/resources
+COPY backend/restApi/src/main/resources /home/app/back/src/main/resources
 
 # Expose the port that your Spring Boot application is using (adjust if needed)
 EXPOSE 9000
