--- a/backend/restApi/src/main/resources/application.properties
+++ b/backend/restApi/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9000
 
 spring.data.mongodb.uri=mongodb+srv://ftfernandez:dufc9Mrptf9zEiQS@ing-soft-tp-grupal.4w2qt.mongodb.net/newdb?retryWrites=true&w=majority
-
+springdoc.api-docs.path=/api-docs
 # Permitir CORS para todos los endpoints
 spring.web.cors.allowed-origins=http://localhost:3000,https://ing-soft-tp-grupal.vercel.app
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
